--- a/13-slot使用/01-slot的基本使用.html
+++ b/13-slot使用/01-slot的基本使用.html
@@ -14,8 +14,8 @@
 <body>
     <div id="app">
       <!-- <cpn></cpn> -->
-      <!-- <cpn><h3>我的h3标题</h3></cpn> -->
-      <cpn><span slot="myslot">我的插槽span</span></cpn>
+      <cpn><h3>我的h3标题</h3></cpn>
+      <!-- <cpn><span slot="myslot">我的插槽span</span></cpn> -->
       
     </div>
     <template id="cpn">
